Added sub nav for about page.

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@ group: navigation
 permalink: /about/
 body_class: about
 ---
+{% include about-nav.html %}
+
 <div id="hero" style="background-image: url(/assets/images/team.jpg); background-position: center 50px;">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
