--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ body_class: about
       <div class="col-sm-12">
         <h2 class="margin-top-0 margin-bottom-2">About Us</h2>
       </div>
-      <div class="col-sm-7">
+      <div class="container">
         <p>
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and
           success to have a positive impact in the world.
@@ -32,31 +32,6 @@ body_class: about
           YEP was created in 2009 to fill the need for a broader platform for the Ethiopian diaspora across all professions to connect,
           share experiences and valuable resources and pursue community development initiatives.
         </p>
-      </div>
-      <div class="col-sm-1"></div>
-      <div class="col-sm-4">
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div class="media-icon-wrapper">
-              <i class="fa fa-leaf"></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Our Mission</div>
-            <p class="text-muted">to inspire, educate and empower the Ethiopian professionals community to make a positive impact in the world</p>
-          </div>
-        </div>
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div class="media-icon-wrapper">
-              <i class="fa fa-leaf"></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Our Vision</div>
-            <p class="text-muted">to conceive of a strong community that shares ideas, skills, and resources to enrich lives</p>
-          </div>
-        </div>
       </div>
     </div>
   </div>
@@ -102,23 +77,3 @@ body_class: about
     </div>
   </div>
 </div>
-
-<div class="prose bg-gray">
-  <div class="container pad-by-50">
-    {% include founders.html %}
-  </div>
-</div>
-
-<div class="prose bg-white">
-  <div class="container pad-by-50">
-    <div class="row">
-      <div class="col-sm-12">
-        <h2 class="margin-top-0 margin-bottom-2">Our History</h2>
-      </div>
-      <div class="col-sm-12">
-        {% include history.html %}
-      </div>
-    </div>
-  </div>
-</div>
-
