Fixed nav and subnav selection.

--- a/_page/team.html
+++ b/_page/team.html
@@ -3,6 +3,7 @@ layout: about
 title: Team
 header: Team
 permalink: /about/team/
+body_class: about
 ---
 <div class="prose bg-white">
   <div class="container pad-by-50">
