--- a/_page/mission.html
+++ b/_page/mission.html
@@ -3,6 +3,7 @@ layout: about
 title: Mission
 header: Mission
 permalink: /about/mission/
+body_class: about
 ---
 <div class="container pad-by-50">
   <h2 class="margin-top-0 margin-bottom-2">Our Mission & Vision</h2>
