--- a/_page/origin.html
+++ b/_page/origin.html
@@ -3,6 +3,7 @@ layout: about
 title: Origin
 header: Origin
 permalink: /about/origin/
+body_class: about
 ---
 <div class="container pad-by-50">
   <h2 class="margin-top-0 margin-bottom-2">Our Story</h2>
