--- a/_page/team.html
+++ b/_page/team.html
@@ -17,7 +17,11 @@ body_class: about
       {% for person in persons %}
       <div class="col-sm-4">
         <div class="card-item panel">
-          <img src="{{ site.url }}/assets/images/team/vacant.jpg">
+          {% if person.image %}
+            <img src="{{ site.url }}/assets/images/team/{{ person.image }}">
+          {% else %}
+            <img src="{{ site.url }}/assets/images/team/vacant.jpg">
+          {% endif %}
           <h4>{{ person.name }}</h4>
           <h6>{{ person.position }}</h6>
         </div>
