--- a/about.html
+++ b/about.html
@@ -5,17 +5,21 @@ header: About Us
 group: navigation
 permalink: /about/
 body_class: about
+sections:
+  - title: Origin Story
+    desc: Lorem ipsum
+    image: programs_callout_1.jpg
+    path: /about/origin
+  - title: Accomplishments
+    desc: Lorem ipsum
+    image: programs_callout_2.jpg
+    path: /about/accomplishments
+  - title: Team
+    desc: Lorem ipsum
+    image: programs_callout_3.jpg
+    path: /about/team
 ---
 {% include about-nav.html %}
-
-<div id="hero" style="background-image: url(/assets/images/team.jpg); background-position: center 50px;">
-  <div class="hero-overlay"></div>
-  <div class="hero-content-wrapper">
-    <div class="container text-center">
-      <h2>About YEP</h2>
-    </div>
-  </div>
-</div>
 
 <div class="prose bg-white">
   <div class="container pad-by-50">
@@ -28,12 +32,35 @@ body_class: about
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and
           success to have a positive impact in the world.
         </p>
-        <p>
-          YEP was created in 2009 to fill the need for a broader platform for the Ethiopian diaspora across all professions to connect,
-          share experiences and valuable resources and pursue community development initiatives.
-        </p>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="prose bg-white">
+  <div class="container pad-by-50">
+    <section id="programs-callout">
+      <div class="container">
+        <div class="row">
+          {% for item in page.sections %}
+          <div class="col-xs-12 col-md-4">
+            <div class="card">
+              <figure>
+                <img src="/assets/images/{{ item.image }}">
+              </figure>
+              <div class="copy-holder">
+                <h3>{{ item.title }}</h3>
+                <p>{{ item.desc }}
+                <br>
+                <a href="{{ item.path }}" class="btn btn-default">{{ item.title }}</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </section>
   </div>
 </div>
 
