Added video and cards for about page.

--- a/about.html
+++ b/about.html
@@ -7,15 +7,15 @@ permalink: /about/
 body_class: about
 sections:
   - title: Origin Story
-    desc: Lorem ipsum
+    desc: In 2010, Mesfin Getaneh, Shimeles Mekonnen, and Lulit Tesfaye began working to establish YEP.
     image: programs_callout_1.jpg
     path: /about/origin
   - title: Accomplishments
-    desc: Lorem ipsum
+    desc: For close to a decade, YEP has hosted numerous networking events, career development workshops and more.
     image: programs_callout_2.jpg
     path: /about/accomplishments
   - title: Team
-    desc: Lorem ipsum
+    desc: Meet the members of the YEP team and learn more about their journey to join this mission-driven organization and the role they play.
     image: programs_callout_3.jpg
     path: /about/team
 ---
@@ -25,16 +25,42 @@ sections:
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="margin-top-0 margin-bottom-2">About Us</h2>
+        <h1 class="margin-top-0 margin-bottom-2">About Us</h1>
       </div>
       <div class="container">
-        <p>
+        <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and
           success to have a positive impact in the world.
         </p>
       </div>
     </div>
   </div>
+
+  <section class="page-head">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <figure class="flex-video widescreen">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/r6eMugcQuH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </figure>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <h2 style="margin-top: 0">Our Mission</h2>
+          <p style="margin-bottom: 1em">
+            Founded in 2010, YEP is a non-partisan and non-religious organization that
+            began by featuring inspirational speakers, hosting educational sessions and
+            providing networking opportunities to support our mission.
+          </p>
+          <p style="margin-bottom: 1em">
+          YEP was founded by three individuals who recognized the lack of
+          effective networking platforms for young diverse Ethiopian
+          professionals in the Washington Metropolitan area.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </div>
 
 <div class="prose bg-white">
