--- a/_page/mission.html
+++ b/_page/mission.html
@@ -5,13 +5,22 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<div class="container pad-by-50">
+<div class="container bg-white pad-by-50">
   <h2 class="margin-top-0 margin-bottom-2">Our Mission & Vision</h2>
 </div>
 
-<div class="container">
+<div class="container bg-white">
   <h3>Our Mission</h3>
-  <p>To inspire, educate and empower the Ethiopian professionals community to make a positive impact in the world</p>
+  <p>To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+
   <h3>Our Vision</h3>
-  <p>To conceive of a strong community that shares ideas, skills, and resources to enrich lives</p>
+  <p>A strong community that shares ideas, skills and resources to enrich lives.</p>
+
+  <h3>Goals</h3>
+  <ul>
+    <li>Develop and/or enhance skill sets and knowledge to achieve ongoing career goals</li>
+    <li>Enables a professional/student mentorship</li>
+    <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
+  </ul>
+
 </div>
