Updated callout image.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ sections:
     path: /about/origin
   - title: Accomplishments
     desc: For close to a decade, YEP has hosted numerous networking events, career development workshops and more.
-    image: programs_callout_2.jpg
+    image: 2015-04-30-thomas-debass.jpg
     path: /about/accomplishments
   - title: Team
     desc: Meet the members of the YEP team and learn more about their journey to join this mission-driven organization and the role they play.
