--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -5,4 +5,23 @@ group: navigation
 permalink: /diaspora-corner/
 body_class: diaspora
 ---
-Hello
+<div class="prose bg-white">
+  <div class="container pad-by-50">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="margin-top-0 margin-bottom-2">Diaspora Corner</h1>
+      </div>
+      <div class="container">
+        <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
+          In 2018, YEP starts a blog called Diaspora Corner where we highlight individuals who inspires us, thriving in their field of work and be an example in their lives and works.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="prose bg-gray">
+  <div class="container pad-by-50">
+    {% include diaspora-cards.html %}
+  </div>
+</div>
