Updated card style.

--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -20,7 +20,7 @@ body_class: diaspora
   </div>
 </div>
 
-<div class="prose bg-gray">
+<div class="bg-gray card-grid">
   <div class="container pad-by-50">
     {% include diaspora-cards.html %}
   </div>
