--- a/_page/team.html
+++ b/_page/team.html
@@ -3,7 +3,7 @@ layout: about
 title: Team
 header: Team
 permalink: /about/team/
-body_class: about
+body_class: team
 ---
 <div class="prose bg-white">
   <div class="container pad-by-50">
@@ -12,18 +12,22 @@ body_class: about
         <h1 class="margin-top-0 margin-bottom-2">Our Team</h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row card-grid">
       {% assign persons = site.data.team %}
       {% for person in persons %}
       <div class="col-sm-4">
-        <div class="card-item panel">
-          {% if person.image %}
-            <img src="{{ site.url }}/assets/images/team/{{ person.image }}">
-          {% else %}
-            <img src="{{ site.url }}/assets/images/team/vacant.jpg">
-          {% endif %}
-          <h4>{{ person.name }}</h4>
-          <h6>{{ person.position }}</h6>
+        <div class="card">
+          <figure>
+            {% if person.image %}
+              <img src="{{ site.url }}/assets/images/team/{{ person.image }}">
+            {% else %}
+              <img src="{{ site.url }}/assets/images/team/vacant.jpg">
+            {% endif %}
+          </figure>
+          <div class="copy-holder">
+            <h3>{{ person.name }}</h3>
+            <p>{{ person.position }}</p>
+          </div>
         </div>
       </div>
       {% endfor %}
