Added a responsive hero.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 layout: default
 body_class: front
 ---
-
-<div id="hero-front" style="width: 100%;/*background-position: center 0px*/;">
-  <div class="hero-content-wrapper">
-    <div class="item">
-      <img src="/assets/images/Canoe_Sacred_Headwaters-0x0.jpg" alt="">
-      <div class="hero-caption">
-        <div style="padding:15px; background: rgba(0, 0, 0, 0.6)">
-          <h3>The Future of Ethiopian Professionals</h3>
-          <p>Securing the skills necessary to build a community for the next generation of thinkers and leaders.</p>
-        </div>
-      </div>
+<section class="hero" style="background-image: url(assets/images/hero/1H6A1950.JPG)">
+  <div class="inner">
+    <div class="copy">
+      <h1>The Future of Ethiopian Professionals</h1>
+      <p>Securing the skills necessary to build a community for the next generation of thinkers and leaders.</p>
     </div>
   </div>
-</div>
+</section>
 
 {% include callout.html %}
 
