--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 body_class: front
 ---
-<section class="hero" style="background-image: url(assets/images/hero/1H6A1950.JPG)">
+<section class="hero" style="background-image: url(assets/images/hero/speaker-series-thomas-debass.jpg)">
   <div class="inner">
     <div class="copy">
       <h1>The Future of Ethiopian Professionals</h1>
