--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@ body_class: front
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="card-item panel">
-            <h3>News Media</h3>
-              {% assign items = site.data.news %}
-              {% for item in items %}
-                <div class="">
-                  <h5 style="font-weight:bold">{{ item.title }}</h5>
-                  <p style="font-size:12px">{{ item.desc }}</p>
-                </div>
-              {% endfor %}
+          <div class="" style="margin-top: 1.0em; margin-bottom: 2em">
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+            <script type="IN/CompanyProfile" data-id="18023764" data-format="inline" data-related="false"></script>
           </div>
         </div>
 
