--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@ sections:
       </div>
       <div class="container">
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-          Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and
-          success to have a positive impact in the world.
+          Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and 
+          success.
         </p>
       </div>
     </div>
@@ -45,16 +45,19 @@ sections:
           </figure>
         </div>
         <div class="col-sm-12 col-md-6">
-          <h2 style="margin-top: 0">Our Mission</h2>
+          <h2 style="margin-top: 0">Who We Are</h2>
           <p style="margin-bottom: 1em">
-            Founded in 2010, YEP is a non-partisan and non-religious organization that
-            began by featuring inspirational speakers, hosting educational sessions and
-            providing networking opportunities to support our mission.
+            Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that 
+            provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network, 
+            share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
           <p style="margin-bottom: 1em">
-          YEP was founded by three individuals who recognized the lack of
-          effective networking platforms for young diverse Ethiopian
-          professionals in the Washington Metropolitan area.
+          YEP was founded in 2010 by three individuals who recognized 
+          the lack of effective networking platforms for the diverse 
+          Ethiopian professionals in the Washington Metropolitan area. 
+          YEP began by featuring inspirational speakers, hosting educational sessions and providing 
+          networking opportunities to support its mission.
+
           </p>
         </div>
       </div>
