--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -7,6 +7,28 @@ description: The Career Development Program provides a platform to help members 
 categories:
 - programs
 ---
+<h2>Program Overview</h2>
+
+<p>
+The Career Development Program provides a platform to help members in their career development journey, 
+from finding and gaining employment through progressing towards individual career goals. 
+YEP organizes various programs and events such as invited speakers series, panel discussions and 
+virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and 
+mock interview sessions where you can gain valuable individualized feedback.
+</p>
+
+<h2>Program Mission</h2>
+
+<p>
+ Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to achieve career goals after joining the workforce.
+</p>
+
+<p>
+Disclaimer: We cannot guarantee employment. The aim of this program is to help expose you to more opportunities that are available.
+</p>
+
+<h2>Program Offerings</h2>
+
 <p>
 If you are a job seeker, know of a job opening or have suggestions for the future events, we would love to hear from you!
 </p>
@@ -20,22 +42,54 @@ Disclaimer: We cannot guarantee employment. The aim of this program is to help e
 </p>
 
 <p>
-Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: e-mail the Program team the link to the job description or fill out this form to let us know more about it.
-</p>
+Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team the link to the job description or fill out this form to let us know more about it. 
+</p> 
 
 <p>
-Feedback for the Career Development Program: We would love to hear your feedback on what programs and events would provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have knowledge or skills you would like to share as well!
-</p>
+Feedback for the Career Development Program: We would love to hear your feedback on what programs and events would provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have knowledge or skills you would like to share as well!  
+</p> 
 
-<h2>Career Program Offerings</h2>
+<h2>Career Program Calendar</h2>
 
 <p>
-Here you will be able to see the list of events that the Career Development Programs has planned for the next two months
+Here you will be able to see the list of events that the Career Development Programs has planned for the next two months.
 </p>
 
 <div class="margin-top-2 margin-bottom-2">
   <iframe src="https://calendar.google.com/calendar/embed?src=u4mj77pucdkoud9584vsbp9isg%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
+
+<h2>Upcoming Events</p>
+
+<p>
+March 2018: Career Series Part II (Digital)
+</p>
+
+<p>
+Learning on the job (training/skill building), performance evaluations, asking for a promotion, networking on the job and finding a mentor at work.
+</p>
+
+<p>
+Job Fair
+</p>
+
+<p>
+May 2018: Career Series Part III (Digital)
+</p>
+
+<p>
+Changing careers, building and highlighting transferable skills, managing others
+</p>
+
+<h2>Past Events</p>
+
+<p>
+January 2018: Career Series Part I 
+</p>
+
+<p>
+Writing Resumes and Cover Letters, Personal Branding, Interview Prep, Salary Negotiations and Transitioning into the workforce 
+</p>
 
 <h2>Additional Resources</p>
 
