--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -2,7 +2,6 @@
 layout: program
 title: Career Development
 img: career-development.jpg
-manager: Vacant
 description: The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback.
 categories:
 - programs
@@ -21,10 +20,6 @@ mock interview sessions where you can gain valuable individualized feedback.
 
 <p>
  Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to achieve career goals after joining the workforce.
-</p>
-
-<p>
-Disclaimer: We cannot guarantee employment. The aim of this program is to help expose you to more opportunities that are available.
 </p>
 
 <h2>Program Offerings</h2>
@@ -59,7 +54,7 @@ Here you will be able to see the list of events that the Career Development Prog
   <iframe src="https://calendar.google.com/calendar/embed?src=u4mj77pucdkoud9584vsbp9isg%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<h2>Upcoming Events</p>
+<h2>Upcoming Events</h2>
 
 <p>
 March 2018: Career Series Part II (Digital)
@@ -81,7 +76,7 @@ May 2018: Career Series Part III (Digital)
 Changing careers, building and highlighting transferable skills, managing others
 </p>
 
-<h2>Past Events</p>
+<h2>Past Events</h2>
 
 <p>
 January 2018: Career Series Part I 
