Removed extra padding.

--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -21,7 +21,7 @@ body_class: diaspora
 </div>
 
 <div class="bg-gray card-grid">
-  <div class="container pad-by-50">
+  <div class="container">
     {% include diaspora-cards.html %}
   </div>
 </div>
