--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -22,6 +22,31 @@ body_class: diaspora
 
 <div class="bg-gray card-grid">
   <div class="container">
-    {% include diaspora-cards.html %}
+    <h2 class="text-center margin-bottom-4 margin-top-0">Featured Stories</h2>
+    {% for item in site.diaspora %}
+      <div class="row story bg-white">
+        <div class="col-xs-3">
+          <figure>
+            <a href="{{ item.url }}">
+              <img src="{{ site.url }}/assets/images/diaspora/{{ item.image }}">
+            </a>
+          </figure>
+          <div class="clear"></div>
+        </div>
+        <div class="col-xs-9 padding-2">
+          <div class="headline">
+            <h3 class="margin-top-0">{{ item.title }}</h3>
+            <h4>{{ item.position }}</h3>
+          </div>
+          <div class="blurb">
+            <p>{{ item.excerpt | strip_html | truncatewords:68 }}</p>
+          </div>
+          <div class="cta">
+            <a href="{{ item.url }}" class="btn btn-default">Rearn more</a>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </div>
+    {% endfor %}
   </div>
 </div>
