--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -42,7 +42,7 @@ body_class: diaspora
             <p>{{ item.excerpt | strip_html | truncatewords:68 }}</p>
           </div>
           <div class="cta">
-            <a href="{{ item.url }}" class="btn btn-default">Rearn more</a>
+            <a href="{{ item.url }}" class="btn btn-default">Read more</a>
           </div>
         </div>
         <div class="clear"></div>
