--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -13,7 +13,7 @@ body_class: diaspora
       </div>
       <div class="container">
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-         Diaspora Corner is a blog where YEP highlight individuals who inspires us, thriving in their field of work and be an example in their lives and works.
+         Diaspora Corner is a blog where we highlight individuals who inspire us, thriving in their field of work and being examples in their lives and works.
         </p>
       </div>
     </div>
