--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Diaspora and Community Engagement (DCE)
-img:diaspora-engagement-2.jpg
+img:diaspora-engagement.jpg
 manager: Vacant
 ---
 The Diaspora and Community Engagement (DCE) Program looks to strengthen community 
