--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/speaker-series-thomas-debass.jpg)">
+<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
   <div class="inner">
     <div class="copy">
       <h1>YEP Programs</h1>
