--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -23,7 +23,8 @@ body_class: diaspora
 <div class="bg-gray card-grid">
   <div class="container">
     <h2 class="text-center margin-bottom-4 margin-top-0">Featured Stories</h2>
-    {% for item in site.diaspora %}
+    {% assign items = site.diaspora | sort: 'date' %}
+    {% for item in items %}
       <div class="row story bg-white">
         <div class="col-sm-3">
           <figure>
