--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body_class: front
 
 {% include callout.html %}
 
-<!-- latest -->
+<!-- latest 
 <div class="prose bg-gray">
   <div class="container pad-by-100">
     <div class="cards">
@@ -45,3 +45,4 @@ body_class: front
 
   </div>
 </div>
+-->
