Updated new event markup.

--- a/_events/2018-02-15-communication-skills.html
+++ b/_events/2018-02-15-communication-skills.html
@@ -2,16 +2,15 @@
 layout: event 
 title: "Effective Communication Skills: What are they and how to improve them?"
 permalink: /event/2018/02/effective-communication-skills/
-img: 2018-02-15-comm.jpg
-date: Thursday, Feb 15, 2018 at 6:30 PM
-eventbrite: https://www.eventbrite.com/e/effective-communication-skills-what-are-they-and-how-to-improve-them-tickets-42182466894
+image: 2018-02-15-comm.jpg
+date: Saturday, June 10, 2017 at 6:30 PM
 location: |
   Marriott Marquis
   901 Massachusetts Ave NW
   George Washington University Room
   Washington, DC 20001
+eventbrite: https://www.eventbrite.com/e/effective-communication-skills-what-are-they-and-how-to-improve-them-tickets-42182466894
 categories:
-- events
 - seminar
 ---
 <p>
