Removed extra whitespace from title.

--- a/programs.html
+++ b/programs.html
@@ -18,7 +18,7 @@ body_class: programs
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center margin-bottom-4">
-        <h2 class="margin-bottom-4 margin-top-0">Our Programs</h2>
+        <h2 class="margin-top-0">Our Programs</h2>
       </div>
       {% for program in site.programs limit:include.limit %}
       <div class="col-xs-12 col-md-4" style="margin-bottom: 1em;">
