--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -3,10 +3,7 @@ layout: program
 title: Professional Mentorship
 img: professional-mentorship.jpg
 manager: Vacant
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt dapibus sapien eu finibus. Cras accumsan consequat ultrices. Suspendisse bibendum at eros vitae suscipit. In elit lacus, commodo vitae eleifend quis, eleifend et justo. Donec semper iaculis auctor. Suspendisse non purus enim. Aliquam erat volutpat. Vestibulum sit amet dolor vulputate, aliquam mauris sit amet, tempor mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rhoncus hendrerit turpis vel rhoncus. Donec vulputate vitae nisi eu rutrum.
+description: A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
 categories:
 - programs
 ---
-<p>The &nbsp;<a href="http://yepnetworks.us11.list-manage2.com/track/click?u=5d936b18dafd103ed356a89c6&amp;id=8b859ff9fb&amp;e=e2a73a2fcc">Professional&nbsp;Mentorship&nbsp;Program</a>&nbsp;is now live!&nbsp;The program enables a one-on-one&nbsp;professional learning relationship between a&nbsp;mentor&nbsp;and mentee for members to expand their knowledge, leadership skills and enhance professional competencies.&nbsp;<br />
-<br />
-This year's pilot program has received high applicant interest with 30&nbsp;compatible&nbsp;mentors&nbsp;and mentees&nbsp;to participate. The pilot program will run from April to July 2017.&nbsp;If you are interested to participate in the next phase, please complete the&nbsp;<strong><a href="http://yepnetworks.us11.list-manage.com/track/click?u=5d936b18dafd103ed356a89c6&amp;id=ddcefd740d&amp;e=e2a73a2fcc">interest form</a></strong>&nbsp;available for members to be considered and matched.&nbsp;</p>
