--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@ sections:
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and 
           success.
+          <img src="our_team.jpg" alt="Our Team">
         </p>
       </div>
     </div>
