Added featured flag.

--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -6,6 +6,7 @@ manager: Vacant
 description: Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.
 categories:
 - programs
+featured: true
 ---
 <div class="container">
 	<h3>Guide</h3>
