--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -6,4 +6,5 @@ manager: Vacant
 description: A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
 categories:
 - programs
+featured: true
 ---
