--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -3,6 +3,7 @@ layout: program
 title: Diaspora and Community Engagement (DCE)
 img: diaspora-engagement.jpg
 manager: Vacant
+featured: true
 ---
 The Diaspora and Community Engagement (DCE) Program looks to strengthen community 
 relations and support the development of a cohesive network through in-person and virtual programming. 
