Added descriptions for programs.

--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -3,11 +3,13 @@ layout: program
 title: Personal and Professional Empowerment
 img: personal-professional-empowerment.jpg
 manager: Vacant
-description: Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.
+description: Providing the tools and resources that help members develop the confidence and strength to set realistic goals and fulfil their potential.
 categories:
 - programs
 featured: true
 ---
+Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.
+
 <div class="container">
 	<h3>Guide</h3>
 	
