--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -3,8 +3,9 @@ layout: program
 title: Professional Mentorship
 img: professional-mentorship.jpg
 manager: Vacant
-description: A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
+description: Providing the tools and resources that help members excel in their different stages of career development journey.
 categories:
 - programs
 featured: true
 ---
+A platform that enables a professional learning relationship in which a mentor and a Mentee agree to a partnership where they work collaboratively towards the achievement of mutually-defined goals . This relationship will develop a mentee's skills, abilities, knowledge, and/or thinking.
