--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -2,6 +2,7 @@
 layout: program
 title: Diaspora and Community Engagement (DCE)
 img: diaspora-engagement.jpg
+description: Bringing our community together and support the development of a cohesive network through various activities.
 manager: Vacant
 featured: true
 ---
