--- a/events.html
+++ b/events.html
@@ -15,10 +15,60 @@ body_class: events
   </div>
 </div>
 
-<div class="bg-gray card-grid">
-  <div class="container">
-    <div class="row">
-      {% include events.html %}
+<div class="bg-gray overview">
+  <section class="sub-navigation">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center margin-bottom-4">
+          <h2 class="margin-bottom-4 margin-top-0">Upcoming Events</h2>
+        </div>
+        {% for event in site.events %}
+          <div class="col-xs-12 col-md-4" style="margin-bottom: 1em;">
+            <div class="card">
+              {% if event.eventbrite %}
+                <a target="_blank" href="{{ event.eventbrite }}">
+              {% else %}
+                <a href="{{ event.url }}">
+              {% endif %}
+                <figure>
+                  {% if event.image %}
+                  <img src="{{ site.baseurl }}/assets/images/events/{{ event.image }}">
+                  {% endif %}
+                </figure>
+              </a>
+              <h3>{{ event.title }}</h3>
+              <p>{{ event.date }}</p>
+              <p>{{ event.venue }}</p>
+              {% if event.eventbrite %}
+                <a target="_blank" href="{{ event.eventbrite }}" class="btn btn-default">Learn More</a>
+              {% else %}
+                <a href="{{ event.url }}" class="btn btn-default">Learn More</a>
+              {% endif %}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 text-center margin-bottom-4">
+          <h2 class="margin-bottom-4 margin-top-0">Past Events</h2>
+        </div>
+        {% for event in site.data.events %}
+          <div class="col-sm-5 col-md-4" style="margin-bottom: 1em;">
+            <div class="card">
+              <a target="_blank" href="{{ event.url }}">
+                <figure>
+                  <img src="{{ event.image }}">
+                </figure>
+              </a>
+              <h3>{{ event.title }}</h3>
+              <p>{{ event.date }}</p>
+              <p>{{ event.venue }}</p>
+              <a target="_blank" href="{{ event.url }}" class="btn btn-default">Learn More</a>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
     </div>
-  </div>
+  </section>
 </div>
