--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@ body_class: events
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-2">
           {% for event in site.events %}
-            <div class="col-xs-12 col-md-4" style="">
+            <div class="event-item col-xs-12 col-md-4" style="">
               <div class="card">
                 {% if event.eventbrite %}
                   <a target="_blank" href="{{ event.eventbrite }}">
@@ -55,7 +55,7 @@ body_class: events
         <div id="menu2" class="tab-pane fade">
           <div class="row margin-top-2">
           {% for event in site.data.events %}
-            <div class="col-sm-5 col-md-4" style="">
+            <div class="event-item col-sm-5 col-md-4" style="">
               <div class="card">
                 <a target="_blank" href="{{ event.url }}">
                   <figure>
