Removed gray bg.

--- a/programs.html
+++ b/programs.html
@@ -14,7 +14,7 @@ body_class: programs
   </div>
 </section>
 
-<div class="bg-gray overview">
+<div class="overview">
   <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="">Our Programs</h2>
   </div>
