--- a/about.html
+++ b/about.html
@@ -6,17 +6,17 @@ group: navigation
 permalink: /about/
 body_class: about
 sections:
-  - title: Origin Story
-    desc: In 2010, Mesfin Getaneh, Shimeles Mekonnen, and Lulit Tesfaye began working to establish YEP.
-    image: assets/images/programs/professional-mentorship.jpg
-    path: /about/origin
+  - title: Our History
+    desc: YEP was founded in 2010 by three individuals who recognized the lack of effective networking platforms for the diverse Ethiopian professionals in the Washington Metropolitan area.
+    image: assets/images/programs/leadership_team_2.jpg
+    path: /about/History
   - title: Accomplishments
-    desc: For close to a decade, YEP has hosted numerous networking events, career development workshops and more.
-    image: assets/images/2015-04-30-thomas-debass.jpg
+    desc: For close to a decade, YEP has hosted numerous Guest Speakers, Networking events, Career Development workshops, New-comers Workshop and more.
+    image: assets/images/accomplishments.jpg
     path: /about/accomplishments
   - title: Team
     desc: Meet the members of the YEP team and learn more about their journey to join this mission-driven organization and the role they play.
-    image: assets/images/programs/diaspora-engagement.jpg
+    image: assets/images/programs/team_pic.jpg
     path: /about/team
 ---
 {% include about-nav.html %}
@@ -31,8 +31,8 @@ sections:
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
           success.
-          <img src="our_team.jpg" alt="Our Team">
-        </p>
+           </p>
+          <img src=about_us.jpg">
       </div>
     </div>
   </div>
@@ -40,12 +40,6 @@ sections:
   <section class="page-head">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <figure class="flex-video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/r6eMugcQuH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </figure>
-        </div>
-        <div class="col-sm-12 col-md-6">
           <h2 style="margin-top: 0">Who We Are</h2>
           <p style="margin-bottom: 1em">
             Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
@@ -60,6 +54,12 @@ sections:
           networking opportunities to support its mission.
 
           </p>
+            <div class="col-sm-12 col-md-6">
+          <figure class="flex-video widescreen">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/r6eMugcQuH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </figure>
+        </div>
+        <div class="col-sm-12 col-md-6">                            
         </div>
       </div>
     </div>
